--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rugged"]
 	path = rugged
 	url = https://github.com/libgit2/rugged.git
+[submodule "d3"]
+	path = d3
+	url = https://github.com/mbostock/d3.git
